--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,9 @@ jobs:
         cache: 'npm'
         
     - name: Install dependencies
-      run: npm ci
+      run: |
+        npm cache clean --force
+        npm install --legacy-peer-deps
       
     - name: Run linting
       run: npm run lint
@@ -93,7 +95,9 @@ jobs:
         cache: 'npm'
         
     - name: Install dependencies
-      run: npm ci
+      run: |
+        npm cache clean --force
+        npm install --legacy-peer-deps
       
     - name: Build playground
       run: vite build --config playground/vite.config.ts --mode production
