Update lint, test configs and improve ESLint rules
Refactors ESLint and Jest configs to use ESM syntax, expands ESLint ignore patterns and rules for dev files, and updates lint scripts to check all files. Also removes unused state from PlaygroundLayout and adds 'type': 'module' to package.json for ESM compatibility.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "akgui-core",
   "version": "0.0.0",
+  "type": "module",
   "description": "AKGUI - Production-ready React Component Library",
   "main": "dist/index.cjs.js",
   "module": "dist/index.es.js",
@@ -20,8 +21,8 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:visual": "playwright test",
-    "lint": "eslint src --ext .ts,.tsx",
-    "lint:fix": "eslint src --ext .ts,.tsx --fix",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "format": "prettier --write \"src/**/*.{ts,tsx,css,md}\"",
     "typecheck": "tsc --noEmit",
     "prepublishOnly": "npm run build",
