--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI/CD
+name: CI
 
 on:
   push:
@@ -10,40 +10,32 @@ jobs:
   test:
     runs-on: ubuntu-latest
     
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x]
-    
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
       
-    - name: Setup Node.js ${{ matrix.node-version }}
+    - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: '20'
         cache: 'npm'
         
     - name: Install dependencies
       run: |
-        npm cache clean --force
-        npm install --legacy-peer-deps
+        npm ci --legacy-peer-deps
+        
+    - name: Verify Jest installation
+      run: |
+        npx jest --version
         
     - name: Run type checking
       run: npm run typecheck
       
     - name: Run tests
-      run: npm run test
+      run: npm test -- --passWithNoTests
       
     - name: Run build
       run: npm run build
       
     - name: Check bundle size
       run: npm run size
-      
-    - name: Upload coverage reports
-      uses: codecov/codecov-action@v3
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
-        files: ./coverage/lcov.info
-        fail_ci_if_error: false
