Update Jest config and CI workflow for ESM support
Refactors jest.config.js to enable ESM support and updates transform options. Simplifies the CI workflow by removing redundant Jest version check and uses 'npm test' for running tests. Also updates the test script in package.json to allow passing with no tests.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,15 +24,11 @@ jobs:
       run: |
         npm ci --legacy-peer-deps
         
-    - name: Verify Jest installation
-      run: |
-        npx jest --version
-        
     - name: Run type checking
       run: npm run typecheck
       
     - name: Run tests
-      run: npx jest --passWithNoTests
+      run: npm test
       
     - name: Run build
       run: npm run build
