--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "build:types": "tsc --project tsconfig.lib.json",
     "playground": "vite --config playground/vite.config.ts",
     "create-component": "node scripts/create-component.js",
-    "test": "jest --passWithNoTests",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
+    "test": "npx jest --passWithNoTests",
+    "test:watch": "npx jest --watch",
+    "test:coverage": "npx jest --coverage",
     "test:visual": "playwright test",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
