--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
         
     - name: Install dependencies
       run: |
-        npm ci --legacy-peer-deps
+        npm ci
         
     - name: Run type checking
       run: npm run typecheck
