--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build:lib": "vite build --config vite.lib.config.ts",
     "build:types": "tsc --project tsconfig.lib.json",
     "playground": "vite --config playground/vite.config.ts",
+    "playground:build": "vite build --config playground/vite.config.ts",
     "create-component": "node scripts/create-component.js",
     "test": "npx jest --passWithNoTests",
     "test:watch": "npx jest --watch",
