Add Vercel build script and update deployment configs
Introduces build.sh for Vercel deployment automation, updates vercel.json to use the script and set Node version, and adds vercel-alternative.json for alternative deployment configuration. Also adjusts Vite config for correct root resolution and base path.

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,11 @@
 {
-  "buildCommand": "npm run playground:build",
+  "buildCommand": "./build.sh",
   "outputDirectory": "playground/dist",
-  "installCommand": "npm install",
+  "installCommand": "echo 'Dependencies will be installed by build script'",
   "framework": null,
+  "env": {
+    "NODE_VERSION": "18"
+  },
   "rewrites": [
     {
       "source": "/(.*)",
