--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,19 @@
 {
-  "buildCommand": "./build.sh",
-  "outputDirectory": "playground/dist",
-  "installCommand": "echo 'Dependencies will be installed by build script'",
-  "framework": null,
-  "env": {
-    "NODE_VERSION": "18"
-  },
-  "rewrites": [
+  "version": 2,
+  "builds": [
     {
-      "source": "/(.*)",
-      "destination": "/index.html"
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "buildCommand": "npm run build:playground",
+        "distDir": "playground/dist"
+      }
     }
   ],
-  "headers": [
+  "routes": [
     {
-      "source": "/assets/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
+      "src": "/(.*)",
+      "dest": "/index.html"
     }
-  ],
-  "cleanUrls": true
+  ]
 }
