Revert "Add Vercel build script and update deployment configs"
This reverts commit d0c6add2b13e8c71cde627ba806ac234340c6714.

--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,8 @@
 {
-  "buildCommand": "./build.sh",
+  "buildCommand": "npm run playground:build",
   "outputDirectory": "playground/dist",
-  "installCommand": "echo 'Dependencies will be installed by build script'",
+  "installCommand": "npm install",
   "framework": null,
-  "env": {
-    "NODE_VERSION": "18"
-  },
   "rewrites": [
     {
       "source": "/(.*)",
